ADDED: Ability to add Form Header

--- a/Pages/addressBook.html
+++ b/Pages/addressBook.html
@@ -19,5 +19,14 @@
                 </div>
             </div>
         </header>
+        <!-- UC2 Add form header-->
+        <div class="form-content">
+            <div class="content">
+                <div class="box-heading">
+                    <div class ="box">PERSON ADDRESS FORM</div>  
+                    <div class ="cancel-button"><a href="addressBook.html"><img src="../Assets/cancel.svg" alt=""></a></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html> 
