ADDED: Add and Reset button

--- a/Pages/addressBook.html
+++ b/Pages/addressBook.html
@@ -81,6 +81,14 @@
                         <error-output class="zip-error" for="text"></error-output>
                     </div>
                 </div>
+                <!-- UC-5 -->
+                <div class="buttonParent">
+                    <div class="submit-reset-button">
+                        <button type="reset" class="resetButton button">Reset</button>
+                        <button type="submit" class="button submitButton" id="submitButton">Add</button>
+                    </div>
+                </div>
+            </div>
             </div>
         </form>
         </div>
