ADDED: Adding inputs and saving it to Local Storage

--- a/Pages/addressBook.html
+++ b/Pages/addressBook.html
@@ -51,28 +51,28 @@
                         <label class="label-text" for="city">City</label>
                         <select class="select" id="city" name="city">
                             <option value="" selected disabled hidden>Select City</option>
-                            <option value="1">Prayagrajl</option>
-                            <option value="2">Tezpur</option>
-                            <option value="3">Jammu</option>
-                            <option value="4">Pune</option>
-                            <option value="5">Jaipur</option>
-                            <option value="6">Bangalore</option>
-                            <option value="7">Vadodra</option>
-                            <option value="8">Kolkata</option>
+                            <option value="Prayagraj">Prayagrajl</option>
+                            <option value="Tezpur">Tezpur</option>
+                            <option value="Jammu">Jammu</option>
+                            <option value="Pune">Pune</option>
+                            <option value="Jaipur">Jaipur</option>
+                            <option value="Bangalore">Bangalore</option>
+                            <option value="Vadodra">Vadodra</option>
+                            <option value="Kolkata">Kolkata</option>
                         </select>
                     </div>
                     <div class="place"> <!--State-->
                         <label class="label-text" for="state">State</label>
                         <select class="select" id="state" name="state">
                             <option value="" selected disabled hidden>Select State</option>
-                            <option value="1">Uttar Pradesh</option>
-                            <option value="2">Assam</option>
-                            <option value="3">Jammu and Kashmir</option>
-                            <option value="4">Maharashtra</option>
-                            <option value="5">Karnataka</option>
-                            <option value="6">Gujrat</option>
-                            <option value="7">West Bengal</option>
-                            <option value="8">Rajasthan</option>
+                            <option value="Uttar Pardesh">Uttar Pradesh</option>
+                            <option value="Assam">Assam</option>
+                            <option value="Jammu and Kashmir">Jammu and Kashmir</option>
+                            <option value="Maharashtra">Maharashtra</option>
+                            <option value="Karnataka">Karnataka</option>
+                            <option value="Gujrat">Gujrat</option>
+                            <option value="West Bengal">West Bengal</option>
+                            <option value="Rajasthan">Rajasthan</option>
                         </select>
                     </div>
                     <div class="place"> <!--Zip Code-->
