ADDED: Ability to add Address Book entry into Address Book LIst and Store in Local Storage

--- a/Pages/addressBook.html
+++ b/Pages/addressBook.html
@@ -51,7 +51,7 @@
                         <label class="label-text" for="city">City</label>
                         <select class="select" id="city" name="city">
                             <option value="" selected disabled hidden>Select City</option>
-                            <option value="Prayagraj">Prayagrajl</option>
+                            <option value="Prayagraj">Prayagraj</option>
                             <option value="Tezpur">Tezpur</option>
                             <option value="Jammu">Jammu</option>
                             <option value="Pune">Pune</option>
@@ -85,7 +85,7 @@
                 <div class="buttonParent">
                     <div class="submit-reset-button">
                         <button type="reset" class="resetButton button">Reset</button>
-                        <button type="submit" class="button submitButton" id="submitButton">Add</button>
+                        <a href="../Pages/addressBook.html"><button type="submit" class="button submitButton" id="submitButton">Add</button></a>
                     </div>
                 </div>
             </div>
