ADDED: View person Address Book details in Tabular Format

--- a/Pages/homePage.html
+++ b/Pages/homePage.html
@@ -30,5 +30,12 @@
         <a href="../pages/add-person.html" class="add-button">
         <img src="../assets/add-24px.svg" alt="">Add User</a>
     </div>
+    <div class="table-main">
+        <table id="table-display" class="table">
+            <!-- UC12 -->
+        </table>
+    </div>
+    <script src = "../js/homePage.js"></script>
+    <script src = "../js/AddressBook.js"></script>
 </body>
 </html> 
