ADDED: Ability to delete entries from Address Book List

--- a/Pages/addressBook.html
+++ b/Pages/addressBook.html
@@ -84,8 +84,9 @@
                 <!-- UC-5 -->
                 <div class="buttonParent">
                     <div class="submit-reset-button">
-                        <button type="reset" class="resetButton button">Reset</button>
                         <a href="../Pages/addressBook.html"><button type="submit" class="button submitButton" id="submitButton">Add</button></a>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button type="reset" class="resetButton button">Reset</button>
                     </div>
                 </div>
             </div>
@@ -96,3 +97,5 @@
         <script defer src = "../js/Validation.js"></script>
     </body>
 </html> 
+
+
