--- a/Pages/homePage.html
+++ b/Pages/homePage.html
@@ -5,7 +5,7 @@
     <!--UC10-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "shortcut icon" href = "/assets/addressBook.svg">
+    <link rel = "shortcut icon" href = "/Assets/addressBook.svg">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/homeStyle.css">
     <title>Address Book</title>
@@ -28,7 +28,7 @@
             <div class="person-detail-text">Person Details<div class="person-count">10</div>
         </div>
         <a href="../pages/add-person.html" class="add-button">
-        <img src="../assets/add-24px.svg" alt="">Add User</a>
+        <img src="../Assets/add-24px.svg" alt="">Add Person</a>
     </div>
     <div class="table-main">
         <table id="table-display" class="table">
