ADDED: Abilitu to Update Address Book Contact details

--- a/Pages/addressBook.html
+++ b/Pages/addressBook.html
@@ -24,7 +24,7 @@
             <div class="content">
                 <div class="box-heading">
                     <div class ="box">PERSON ADDRESS FORM</div>  
-                    <div class ="cancel-button"><a href="addressBook.html"><img src="../Assets/cancel.svg" alt=""></a></div>
+                    <div class ="cancel-button"><a href="homePage.html"><img src="../Assets/cancel.svg" alt=""></a></div>
                 </div>
             </div>
         </div>
@@ -33,7 +33,7 @@
             <form class="form" action="#" onreset="resetForm()" onsubmit="save()">
                 <div class="row-content">   <!--for name-->
                     <label class="label-text" for="name">Full Name</label>
-                    <input class="input" type="text" id="name" name="name" required>
+                    <input class="input" type="text" id="fullname" name="fullname" required>
                     <error-output class="text-error" for="text"></error-output>
                 </div>
                 <div class="row-content">   <!--Phone number-->
