--- a/Pages/homePage.html
+++ b/Pages/homePage.html
@@ -27,7 +27,7 @@
         <div class="header-content">
             <div class="person-detail-text">Person Details<div class="person-count">10</div>
         </div>
-        <a href="../pages/add-person.html" class="add-button">
+        <a href="../pages/addressBook.html" class="add-button">
         <img src="../Assets/add-24px.svg" alt="">Add Person</a>
     </div>
     <div class="table-main">
@@ -36,6 +36,7 @@
         </table>
     </div>
     <script src = "../js/homePage.js"></script>
+    <script src ="../js/site_properties.js"></script>    
     <script src = "../js/AddressBook.js"></script>
 </body>
 </html> 
